<resources>
    <string name="app_name">Lets Chat</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up_prompt">Don\'t have an account, Sign up here!</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_message_prompt">Enter your message here&#8230;</string>
    <string name="author">Author</string>
    <string name="message">Message</string>
    <string name="current_user">Current User</string>
    <string name="user_icon">User Icon</string>
    <string name="other_users">Other Users</string>
    <string name="remember_login">Remember Log In information</string>
    <string name="terms_conditions">I agree to the terms and conditions</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="copyright_notice">©2019 Arnab Maji, All Rights Reserved.</string>
    <string name="app_description">Lets Chat\nVersion: 1.0\n\nDeveloped with ❤️ By️ Arnab Maji</string>
    <string name="thanks_textview">Thank you for using this app!\nAny suggestions, Any queries?\nFeel free to contact!</string>
    <string name="gh_social_media">Github</string>
    <string name="fb_social_media">Facebook</string>
    <string name="ig_social_media">Instagram</string>
    <string name="wp_social_media">Whatsapp</string>
    <string name="other_settings">Other</string>
</resources>
